# ai-agents

./: .gitignore  README.md
Jarvis/: jarvis_cl.py  jarvis_g.py  pyproject.toml
Langchain-Practical-Learning/: env.sample  main.py  pyproject.toml
Langchain-Practical-Learning/tools-and-toolcalling/: custom_tools.py  toolcalling.py
Rag/: pyproject.toml
Rag/DocumentLoaders/: crash_course_on_React.txt  pdf_loader.py  text_loader.py
simple_chatbort_with_local_llm/: README.md  app.py  chat_history.db  pyproject.toml  requirements.txt  simple_test.py
