[project]
name = "simple_chatbort_with_local_llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.0",
    "langchain-community==0.4.1",
    "langchain-core==1.2.5",
    "langchain-ollama==1.0.1",
    "st-copy-to-clipboard==0.1.6",
    "streamlit==1.52.2",
]
